<resources>
    <string name="app_name">WeatherSync</string>
    <string name="app_subtitle">Plan your days smarter. Get personalized forecasts for clothing, activities, &amp; events. Never let weather ruin your plans again.</string>

    <string name="continue_with_google">Continue with Google</string>
    <string name="auth_error">Authentication error</string>
    <string name="google_sign_in_error">Sign in error, make sure you are signed in to Google on this device</string>

    <string name="location_permission_required">WeatherSync requires location permission for accurate weather information</string>
    <string name="request_permission">Request permission</string>
    <string name="go_to_settings">Go to settings</string>

    <string name="upgrade_to_premium">Upgrade to Premium</string>
    <string name="next_update_time">Next update available at %1$s</string>
    <string name="next_generation_available_at">Next generation available at %1$s</string>
    <string name="current_weather">Current weather</string>
    <string name="wind_speed">Wind speed: %1$s</string>

    <string name="could_not_fetch_current_weather">Could not fetch current weather</string>
    <string name="could_not_generate_suggestions">Could not generate suggestions</string>
    <string name="suggestions">Suggestions</string>
    <string name="what_to_wear_bring">What to wear/bring today</string>


    <string name="plan_your_activities">Plan your activities</string>
    <string name="activity_text_field_placeholder">What is the best time to go for a walk?</string>
    <string name="input_cannot_be_empty">Input cannot be empty</string>
    <string name="find_optimal_times">Find optimal times</string>
    <string name="planning_activities">Planning your activities…</string>
    <string name="based_on_forecast_not_premium">Recommendations are based on a %1$s-day hourly forecast for your current location</string>
    <string name="based_on_forecast_premium">Recommendations are based on a %1$s-day hourly forecast for set location</string>
    <string name="source">Source</string>
    <string name="open_meteo_link">https://open-meteo.com/</string>
    <string name="could_not_plan_activities">Could not plan provided activities</string>
    <string name="could_not_refresh_limits">Could not refresh limits</string>

    <string name="theme">Theme</string>
    <string name="could_not_switch_theme">Could not switch theme</string>
    <string name="could_not_load_units">Could not load units</string>
    <string name="could_not_set_units">Could not set unit</string>

    <string name="set_location">Set desired location</string>
    <string name="could_not_set_location">Could not set location. Check your input and internet connection</string>
    <string name="set_location_sheet">Set</string>
    <string name="set_current_location_as_default">Set current location as the default</string>
    <string name="location_set_successfully">Successfully set location to %1$s</string>
    <string name="next_location_set_time">Next location set available at %1$s</string>

    <string name="temp_unit">Temperature unit</string>
    <string name="visibility_unit">Visibility unit</string>
    <string name="wind_speed_unit">Wind speed unit</string>
    <string name="manage_subscriptions_link">https://play.google.com/store/account/subscriptions</string>
    <string name="manage_subscriptions">Manage subscriptions</string>
    <string name="sign_out">Sign out</string>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_link">https://sites.google.com/view/weathersync-privacy-policy?usp=sharing</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="terms_of_service_link">https://sites.google.com/view/weathersync-terms-of-service?usp=sharing</string>
    <string name="app_version">App version:</string>


    <string name="go_premium">Go Premium</string>
    <string name="cancel_anytime">Cancel anytime</string>

    <string name="available_plans">Available plans</string>

    <string name="improved_recommendations">Enhanced AI-Powered Recommendations &amp; Planning</string>
    <string name="increased_activity_planning_days">Plan Activities Up to 7 Days Ahead</string>
    <string name="increased_limits">Access 8x Higher Usage Limits</string>
    <string name="set_location_benefit">Plan, dress, and schedule for any location worldwide</string>
    <string name="ad_free_experience">Enjoy Ad-Free Experience</string>

    <string name="free_trial">%1$s trial</string>
    <string name="after_free_trial">then %1$s</string>
    <string name="start_plan">Start Plan</string>
    <plurals name="month">
        <item quantity="one">%1$ month</item>
        <item quantity="other">%1$s months</item>
    </plurals>
    <plurals name="day">
        <item quantity="one">%1$ day</item>
        <item quantity="other">%1$s days</item>
    </plurals>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="could_not_fetch_subscription_info">Could not fetch subscription info</string>
    <string name="could_not_update_purchases">Could not update purchases</string>
    <string name="could_not_complete_purchase">Could not complete purchase</string>
</resources>