...
                    modifier = Modifier.weight(1.2f))
                Spacer(modifier = Modifier.weight(0.8f))
                Text(text = stringResource(id = R.string.wind_speed, "${weather.windSpeed} ${weather.windSpeedUnit}"),
                    style = labelStyle,
                    modifier = Modifier.weight(0.8f))
            }
        } else CustomCircularProgressIndicator(modifier = Modifier.testTag("CurrentWeatherProgress"))
        }
}


@Preview
@Composable
...
